# airbnb-clone-backend

./: .env  README  db.sqlite3  post.json  pyproject.toml  requirement.txt
bookings/: models.py  serialziers.py
bookings/migrations/: 0001_initial.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_experience_alter_photo_room.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  serializers_bak0807.py  tests.py  txt.txt  urls copy.py  urls.py  views.py  views_1044.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_owner.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+5 files in other folders)
